Fixed pagination spacing.

--- a/resources/assets/sass/buddyprogram/buddyprogram.scss
+++ b/resources/assets/sass/buddyprogram/buddyprogram.scss
@@ -100,6 +100,13 @@ main {
     --backgroud-color: #dcebbe;
     --border-color: #adcf65;
   }
+
+  .pagination {
+    li > a {
+      display: block;
+      padding: 10px;
+    }
+  }
 }
 
 
